Source/src/main/java/MLNParser/MLNParser/MLNParser.java
/* MLNParser.java */
/* Generated By:JavaCC: Do not edit this line. MLNParser.java */
package MLNParser.MLNParser;

//import java.io.*;
import RBNpackage.CPModel;
import MLNExceptions.NoSuchRelationException;
import MLNExceptions.BadArityException;
import MLNParser.*;
import java.util.Vector;


public class MLNParser implements MLNParserConstants {
        private RBNCreator creator;
        private int parseno = 0;

  final public void ReadMarkovLogicNetwork() throws ParseException {
    RelationList();
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(EOL);
    }
    TypeDeclarationList();
    label_2:
    while (true) {
      if (jj_2_2(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(EOL);
    }
    HardFormulaList();
    label_3:
    while (true) {
      if (jj_2_3(3)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(EOL);
    }
    WeightFormulaList();
    label_4:
    while (true) {
      if (jj_2_4(3)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(EOL);
    }
if (parseno==3)
                creator.fileFinished();
    jj_consume_token(0);
}

//Relations
  final public void RelationList() throws ParseException {//variables
        CPModel formula;
    label_5:
    while (true) {
      if (jj_2_5(3)) {
        ;
      } else {
        break label_5;
      }
      RelationDeclared();
      jj_consume_token(EOL);
    }
}

  final public CPModel RelationDeclared() throws ParseException {//variables
        Token tok;
        CPModel formula;
        ParsedRelation relation=new ParsedRelation();
    //grammar
            tok = jj_consume_token(Variable);
//relationName=tok.image;
                relation = new ParsedRelation(tok.image);
    jj_consume_token(OpenPar);
    tok = jj_consume_token(Variable);
relation.addArgument(tok.image);
    label_6:
    while (true) {
      if (jj_2_6(3)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(6);
      tok = jj_consume_token(Variable);
relation.addArgument(tok.image);
    }
    jj_consume_token(ClosePar);
formula = null;
                if (parseno==1)
                        creator.createRelation(relation);
                {if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

  final public void TypeDeclarationList() throws ParseException {
    label_7:
    while (true) {
      if (jj_2_7(3)) {
        ;
      } else {
        break label_7;
      }
      TypeDeclaration();
      label_8:
      while (true) {
        jj_consume_token(EOL);
        if (jj_2_8(3)) {
          ;
        } else {
          break label_8;
        }
      }
    }
}

  final public void TypeDeclaration() throws ParseException {//variables
        Token typeTok,constTok;
    //grammar
            typeTok = jj_consume_token(Variable);
if (parseno==1)
                creator.newTypeDeclared(typeTok.image);
    jj_consume_token(7);
    jj_consume_token(8);
    constTok = jj_consume_token(Constant);
if (parseno==1)
                creator.insertTypeConstant(typeTok.image,constTok.image);
    label_9:
    while (true) {
      if (jj_2_9(3)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(6);
      constTok = jj_consume_token(Constant);
if (parseno==1)
                creator.insertTypeConstant(typeTok.image,constTok.image);
    }
    jj_consume_token(9);
}

//Hard formulas
  final public void HardFormulaList() throws ParseException {//variables
        CPModel formula;
    label_10:
    while (true) {
      if (jj_2_10(3)) {
        ;
      } else {
        break label_10;
      }
      formula = HardFormula();
      jj_consume_token(10);
      label_11:
      while (true) {
        jj_consume_token(EOL);
        if (jj_2_11(3)) {
          ;
        } else {
          break label_11;
        }
      }
if(parseno==2)
                        creator.addNewRelationFormula(formula);
    }
}

  final public CPModel HardFormula() throws ParseException {//variables
        CPModel formula = null;
    //grammar
            formula = Formula_1();
if(parseno == 3){
                        creator.newFormulaForArtificial();
                        {if ("" != null) return null;}
                }
                else if(parseno == 2){
                        formula = creator.createWeightFormula(formula, "");
                        {if ("" != null) return formula;}
                }
        {if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

// A Formula_i is a formula of the form 
// f1 op1 f2 op2 ... opn-1 fn
// where the fi are either atomic formulas or sub-formulas
// that are enclosed in parentheses, the opi are boolean 
// operators, and the operator with the lowest precedence 
// among op1,...,opn-1 is
// i=1: <=>
// i=2: =>
// i=3: v
// i=4: ^
  final public 
CPModel Formula_1() throws ParseException {//variables
        CPModel formula = null;
        CPModel secondPart;
    //grammar
            formula = Formula_2();
    label_12:
    while (true) {
      if (jj_2_12(3)) {
        ;
      } else {
        break label_12;
      }
      jj_consume_token(IfAndOnlyIf);
      secondPart = Formula_2();
if (parseno==2)
                formula = creator.createIfOnlyIf(formula, secondPart);
    }
{if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

  final public CPModel Formula_2() throws ParseException {//variables 
        CPModel formula = null;
        CPModel secondPart;
    //grammar
            formula = Formula_3();
    label_13:
    while (true) {
      if (jj_2_13(3)) {
        ;
      } else {
        break label_13;
      }
      jj_consume_token(Implies);
      secondPart = Formula_3();
if (parseno==2)
                        formula = creator.createImplies(formula,secondPart);
    }
{if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

  final public CPModel Formula_3() throws ParseException {//variables 
        CPModel formula = null;
        CPModel secondPart;
    //grammar
            formula = Formula_4();
    label_14:
    while (true) {
      if (jj_2_14(3)) {
        ;
      } else {
        break label_14;
      }
      jj_consume_token(Or);
      secondPart = Formula_4();
if (parseno==2)
                        formula = creator.createOr(formula,secondPart);
    }
{if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

  final public CPModel Formula_4() throws ParseException {//variables 
        CPModel formula = null;
        CPModel secondPart;
    //grammar
            formula = Formula();
    label_15:
    while (true) {
      if (jj_2_15(3)) {
        ;
      } else {
        break label_15;
      }
      jj_consume_token(And);
      secondPart = Formula();
if (parseno==2)
                        formula = creator.createAnd(formula,secondPart);
    }
{if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

  final public CPModel Formula() throws ParseException {//variables
        Token tok;
        CPModel formula = null;
        ParsedRelation relation=new ParsedRelation();
        Vector<String> quantargs = new Vector<String>();
        String equalityvar1 = "";
        String equalityvar2 = "";
    if (jj_2_19(3)) {
      jj_consume_token(Not);
      formula = Formula();
if (parseno==2){
                formula = creator.createNot(formula);
                }
    } else if (jj_2_20(3)) {
      jj_consume_token(Exist);
      tok = jj_consume_token(Variable);
if (parseno==2){
                        quantargs.add(tok.image);
                }
      label_16:
      while (true) {
        if (jj_2_16(3)) {
          ;
        } else {
          break label_16;
        }
        jj_consume_token(6);
        tok = jj_consume_token(Variable);
if (parseno==2){
                        quantargs.add(tok.image);
                }
      }
      formula = Formula();
if (parseno==2){
                        formula = creator.createExistential(formula,quantargs);
                }
    } else if (jj_2_21(3)) {
      jj_consume_token(Forall);
      tok = jj_consume_token(Variable);
if (parseno==2){
                        quantargs.add(tok.image);
                }
      label_17:
      while (true) {
        if (jj_2_17(3)) {
          ;
        } else {
          break label_17;
        }
        jj_consume_token(6);
        tok = jj_consume_token(Variable);
if (parseno==2){
                        quantargs.add(tok.image);
                }
      }
      formula = Formula();
if (parseno==2){
                        formula = creator.createUniversal(formula,quantargs);
                }
    } else if (jj_2_22(3)) {
      jj_consume_token(OpenPar);
      formula = Formula_1();
      jj_consume_token(ClosePar);

    } else if (jj_2_23(3)) {
      //Atom
              tok = jj_consume_token(Variable);
if (parseno>=2){
                relation = new ParsedRelation(tok.image);
                }
      jj_consume_token(OpenPar);
      tok = jj_consume_token(Variable);
if (parseno>=2){
                relation.addArgument(tok.image);
                }
      label_18:
      while (true) {
        if (jj_2_18(3)) {
          ;
        } else {
          break label_18;
        }
        jj_consume_token(6);
        tok = jj_consume_token(Variable);
if (parseno>=2){
                relation.addArgument(tok.image);
                }
      }
      jj_consume_token(ClosePar);
if (parseno==3){
                                creator.saveRelationForArtificial(relation);
                        }
                        else if (parseno==2){
                                try{
                                        formula = creator.createFormulaRelation(relation);
                                }catch(NoSuchRelationException e){
                                        System.out.println("The " +relation.getRelationName() + " relation is not valid");
                                        e.printStackTrace();
                                }catch(BadArityException e){
                                        System.out.print("The relation " + relation.getRelationName()+"(");
                                        String[] arg = relation.getArgumentsArray();
                                        for(int i=0;i<arg.length-1;i++)
                                                System.out.print(arg[i]+",");
                                        System.out.print(arg[arg.length-1]);
                                        System.out.println(") has not the same arity as declared");
                                        e.printStackTrace();
                                        System.exit(1);
                                }
                                }
    } else if (jj_2_24(3)) {
      // Equality Atom
              tok = jj_consume_token(Variable);
if (parseno==2){
                        equalityvar1 = tok.image;
                }
      jj_consume_token(7);
      tok = jj_consume_token(Variable);
if (parseno==2){
                        equalityvar2 = tok.image;
                }
if (parseno==2){
                        formula = creator.createFormulaEquality(equalityvar1,equalityvar2);
                }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

//Weight Formulas
  final public void WeightFormulaList() throws ParseException {//variables
        CPModel formula;
        Token t;
    label_19:
    while (true) {
      if (jj_2_25(3)) {
        ;
      } else {
        break label_19;
      }
      formula = WeightFormula();
      label_20:
      while (true) {
        jj_consume_token(EOL);
        if (jj_2_26(3)) {
          ;
        } else {
          break label_20;
        }
      }
if(parseno==2)
                        creator.addNewRelationFormula(formula);
    }
}

  final public CPModel WeightFormula() throws ParseException {//variables
        Token t;
        CPModel formula = null;
    //grammar
            t = jj_consume_token(Weight);
    formula = Formula_1();
if(parseno == 3){
                        creator.newFormulaForArtificial();
                        {if ("" != null) return null;}
                }
                else if(parseno == 2){
                        formula = creator.createWeightFormula(formula, t.image);
                        {if ("" != null) return formula;}
                }
        {if ("" != null) return formula;}
    throw new Error("Missing return statement in function");
}

//java functions
  final public void setCreator(RBNCreator c) throws ParseException {
creator = c;
}

  final public void setParse(int i) throws ParseException {
parseno = i;
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_3_20()
 {
    if (jj_scan_token(Exist)) return true;
    if (jj_scan_token(Variable)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_16()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_Formula_263_9_27()) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_26()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_23()
 {
    if (jj_scan_token(Variable)) return true;
    if (jj_scan_token(OpenPar)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3R_HardFormula_172_9_23()
 {
    if (jj_3R_Formula_1_203_9_28()) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_scan_token(And)) return true;
    if (jj_3R_Formula_263_9_27()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_3R_TypeDeclaration_132_9_22()) return true;
    return false;
  }

  private boolean jj_3R_Formula_2_217_9_24()
 {
    if (jj_3R_Formula_3_231_9_25()) return true;
    return false;
  }

  private boolean jj_3_22()
 {
    if (jj_scan_token(OpenPar)) return true;
    if (jj_3R_Formula_1_203_9_28()) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(Not)) return true;
    if (jj_3R_Formula_263_9_27()) return true;
    return false;
  }

  private boolean jj_3R_Formula_263_9_27()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_24()
 {
    if (jj_scan_token(Variable)) return true;
    if (jj_scan_token(7)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3R_WeightFormula_396_9_29()
 {
    if (jj_scan_token(Weight)) return true;
    if (jj_3R_Formula_1_203_9_28()) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_scan_token(Or)) return true;
    if (jj_3R_Formula_4_245_9_26()) return true;
    return false;
  }

  private boolean jj_3_17()
 {
    if (jj_scan_token(6)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_3R_HardFormula_172_9_23()) return true;
    return false;
  }

  private boolean jj_3R_Formula_1_203_9_28()
 {
    if (jj_3R_Formula_2_217_9_24()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_scan_token(6)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3R_Formula_4_245_9_26()
 {
    if (jj_3R_Formula_263_9_27()) return true;
    return false;
  }

  private boolean jj_3_21()
 {
    if (jj_scan_token(Forall)) return true;
    if (jj_scan_token(Variable)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_17()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_Formula_263_9_27()) return true;
    return false;
  }

  private boolean jj_3_25()
 {
    if (jj_3R_WeightFormula_396_9_29()) return true;
    return false;
  }

  private boolean jj_3_13()
 {
    if (jj_scan_token(Implies)) return true;
    if (jj_3R_Formula_3_231_9_25()) return true;
    return false;
  }

  private boolean jj_3R_RelationDeclared_96_9_21()
 {
    if (jj_scan_token(Variable)) return true;
    if (jj_scan_token(OpenPar)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_scan_token(6)) return true;
    if (jj_scan_token(Constant)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_scan_token(6)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_scan_token(6)) return true;
    if (jj_scan_token(Variable)) return true;
    return false;
  }

  private boolean jj_3R_Formula_3_231_9_25()
 {
    if (jj_3R_Formula_4_245_9_26()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3R_TypeDeclaration_132_9_22()
 {
    if (jj_scan_token(Variable)) return true;
    if (jj_scan_token(7)) return true;
    if (jj_scan_token(8)) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_RelationDeclared_96_9_21()) return true;
    return false;
  }
